--- a/src/styles/_base.css
+++ b/src/styles/_base.css
@@ -1,10 +1,23 @@
+@import "_colors.css";
+@import "_fonts.css";
+
 *,
 ::before,
 ::after {
   box-sizing: border-box;
 }
 
-html {
-  font-family: "Roboto", sans-serif;
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+
+
+  background-color: #151515;
+
+  font-family: 'League Spartan', sans-serif;
   font-size: 16px;
+  font-weight: 200;
+  color: var(--body-medium);
 }
