--- a/src/styles/_fonts.css
+++ b/src/styles/_fonts.css
@@ -1,2 +1,2 @@
 /* Use this file to import fonts */
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;800&display=swap');
